--- a/style.css
+++ b/style.css
@@ -29,12 +29,12 @@ body{
     background-color: rgba(127, 255, 212, 0.347);
 }
 
-.col{
+.square{
     border: 2px solid rgba(11, 11, 11, 0.359);
     height: 100%;
     width: 12.5%;
 }
 
-.col:nth-child(odd){
+.square:nth-child(odd){
     background-color: rgba(0, 255, 255, 0.159);
 }
